assets/css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@charset "utf-8";

$serif              : Georgia, Times, serif;
$sans-serif-narrow  : "Roboto", sans-serif;

$header-font-family : $sans-serif-narrow;
$global-font-family : $serif;

.site-logo img {
  overflow: visible;
}

@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
@import "minimal-mistakes"; // main partials

